# SDM

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hehe.md  hog_for_coordinates.py  load_all_data.py  main.py  main_legacy.py  pyproject.toml  train.py
configs/: default.yaml
docs/: bug_fixes.md  coordinate_bug_fixes.md
docs/tutorials/: installation.md  quickstart.md
examples/: compare_methods.py  inference.py  train.py  train_pytorch.py
notebooks/: 00_setup_and_data.ipynb
sdm/: __init__.py  cli.py
sdm/core/: __init__.py  model.py  sdm.py
sdm/data/: __init__.py  dataset.py  loader.py
sdm/features/: __init__.py  hog.py
sdm/pytorch/: __init__.py  dataset.py  model.py  trainer.py
sdm/utils/: __init__.py  bbox.py  image.py  visualization.py
tests/: __init__.py  test_config.py  test_config_mismatch_scenario.py  test_coordinate_fixes.py  test_pytorch.py  test_sdm.py  test_utils.py  verify_wing_loss_fix.py
