[project]
name = "sdm-face-alignment"
version = "2.0.0"
description = "Supervised Descent Method for Face Alignment - 教学重构版本"
authors = [
    {name = "Ning Ding", email = "dingning@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["face-alignment", "computer-vision", "sdm", "hog", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=2.0.0",
    "opencv-python>=4.10.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "matplotlib>=3.9.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.0",
]

notebook = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.2.0",
    "ipywidgets>=8.1.0",
    "plotly>=5.22.0",
    "seaborn>=0.13.0",
]

viz = [
    "streamlit>=1.38.0",
    "gradio>=4.44.0",
]

webcam = [
    "opencv-contrib-python>=4.10.0",
]

all = [
    "sdm-face-alignment[dev,notebook,viz,webcam]",
]

[project.urls]
Homepage = "https://github.com/Ning-Ding/SDM"
Repository = "https://github.com/Ning-Ding/SDM"
Documentation = "https://github.com/Ning-Ding/SDM/tree/main/docs"

[project.scripts]
sdm-train = "sdm.cli:train_cli"
sdm-infer = "sdm.cli:infer_cli"
sdm-demo = "sdm.cli:demo_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sdm"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/*" = ["S101"]       # assert usage

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=sdm",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["sdm"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
